--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ footer {
   text-align: center;
 }
 body {
-  background-image: url('http://gph.is/1a6MFbC');
+  background-image: url('http://i.stack.imgur.com/kx8MT.gif');
   background-size: cover;
+
+  height: 100vh;
+  padding: 0;
+  margin: 0;
 }
