added background image with updated GIF link

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ footer {
   text-align: center;
 }
 body {
-  background-image: url('http://i.stack.imgur.com/kx8MT.gif');
+  background-image: url('http://gph.is/1a6MFbC');
   background-size: cover;
 
   height: 100vh;
