--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ footer {
   text-align: center;
 }
 body {
-  background-image: url('http://gph.is/1a6MFbC');
+  background-image: url('https://pixabay.com/gifs/id-1918/');
   background-size: cover;
 
   height: 100vh;
