--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ footer {
   text-align: center;
 }
 body {
-  background-image: url('https://media1.giphy.com/media/3ohs7Sjl26eSQjem3K/200.gif?cid=5a38a5a27scibzn0qxsncz6ebds4mc4uers8oo9nx9wr5g33&amp;rid=200.gif&amp;ct=g');
+  background-image: url('https://r2.community.samsung.com/t5/image/serverpage/image-id/2858215iF71DB30EFBED2EBB/image-size/large?v=v2&px=999');
   background-size: cover;
 
   height: 100vh;
