--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,29 @@
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  background: linear-gradient(96.2deg, rgb(255, 230, 112) 10.4%, rgb(255, 100, 100) 43.8%, rgb(0, 93, 219) 105.8%);
+  padding: 30px;
+  margin: 250px 0;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
+  border: 4px solid #000000;
+  border-radius: 20px;
+}
+
+.city {
+  display: flex;
+
+}
+select {
+  display: block;
+  width: 100%;
+  border-radius: 4px;
+  padding: 10px;
+  font-size: 18px;
+}
 h1 {
   text-align: center;
+  font-family:'Shrikhand';font-size: 30px;
+ ;
 }
 footer {
   text-align: center;
@@ -7,6 +31,7 @@ footer {
 body {
   background-image: url('https://r2.community.samsung.com/t5/image/serverpage/image-id/2858218i730204E8B30E6838/image-size/large?v=v2&px=999');
   background-size: cover;
+
 
   height: 100vh;
   padding: 0;
