--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 .container {
   max-width: 600px;
-  margin: 0 auto;
+  margin: 60px auto;
   background: linear-gradient(96.2deg, rgb(255, 230, 112) 10.4%, rgb(255, 100, 100) 43.8%, rgb(0, 93, 219) 105.8%);
   padding: 30px;
-  margin: 250px 0;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
   border: 4px solid #000000;
   border-radius: 20px;
@@ -11,7 +10,26 @@
 
 .city {
   display: flex;
+  margin: 20px 0;
+  justify-content: space-between;
+  padding: 20px 0;
+  border-bottom: 1px dashed grey;
+}
 
+.city:last-child {
+  border: none;
+}
+.date {
+  opacity: 0.5;
+}
+.time {
+font-size: 38px;
+font-weight: bold;
+}
+.time small {
+font-size: 18px;
+vertical-align: middle;
+line-height: 36px;
 }
 select {
   display: block;
@@ -22,15 +40,21 @@ select {
 }
 h1 {
   text-align: center;
-  font-family:'Shrikhand';font-size: 30px;
- ;
+  font-family:'Shrikhand';
+  font-size: 30px;
+}
+h2 {
+  margin: 0;
+  font-size: 28px;
 }
 footer {
   text-align: center;
+  font-family: 'Questrial';
 }
 body {
   background-image: url('https://r2.community.samsung.com/t5/image/serverpage/image-id/2858218i730204E8B30E6838/image-size/large?v=v2&px=999');
   background-size: cover;
+  font-family: 'Shrikhand';
 
 
   height: 100vh;
