Updated HTML and CSS to display current date and time of cities.

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,8 @@ select {
   border-radius: 4px;
   padding: 10px;
   font-size: 18px;
+  font-family: 'Questrial';
+
 }
 h1 {
   text-align: center;
