--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@
   display: flex;
   margin: 20px 0;
   justify-content: space-between;
-  padding: 20px 0;
   border-bottom: 1px dashed grey;
+  vertical-align: middle;
 }
 
 .city:last-child {
@@ -25,6 +25,8 @@
 .time {
 font-size: 38px;
 font-weight: bold;
+justify-content: space-between;
+
 }
 .time small {
 font-size: 18px;
